--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Authors@R: c(
 Description: What the package does (one paragraph).
 License: Apache License (>= 2)
 Imports: 
+    methods,
     Rcpp,
     RcppParallel
 LinkingTo: 
@@ -21,3 +22,5 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 SystemRequirements: C++11
+Suggests: 
+    testthat (>= 3.0.0)
