Test classif detection

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,6 +1,8 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^test.*R$
+^test_class.R$
+^test_purify.R$
+^test_regression.R$
 ^LICENSE\.md$
 ^randomPlantedForest\.R$
 ^\.github$
