implement categorical predictors for regression

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,3 +4,6 @@
 ^LICENSE\.md$
 ^randomPlantedForest\.R$
 ^\.github$
+^randomPlantedForest\.Rcheck$
+^randomPlantedForest.*\.tar\.gz$
+^randomPlantedForest.*\.tgz$
