--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,9 @@ export(rpf)
 import(RcppParallel)
 importFrom(Rcpp,loadModule)
 importFrom(Rcpp,sourceCpp)
+importFrom(data.table,':=')
+importFrom(data.table,.SD)
+importFrom(data.table,as.data.table)
 importFrom(hardhat,default_formula_blueprint)
 importFrom(hardhat,default_recipe_blueprint)
 importFrom(hardhat,default_xy_blueprint)
