--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ latex/
 .RData
 .Rproj.user
 randomPlantedForest.Rproj
+randomPlantedForest.Rcheck/
+randomPlantedForest*.tar.gz
+randomPlantedForest*.tgz
