Add input validation/checking, adjust tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(rpf,matrix)
 S3method(rpf,recipe)
 export(rpf)
 import(RcppParallel)
+import(checkmate)
 importFrom(Rcpp,loadModule)
 importFrom(Rcpp,sourceCpp)
 importFrom(data.table,':=')
