Basic multiclass scaffolding

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,5 @@ importFrom(hardhat,mold)
 importFrom(hardhat,validate_outcomes_are_univariate)
 importFrom(hardhat,validate_prediction_size)
 importFrom(methods,new)
+importFrom(stats,model.matrix)
 useDynLib(randomPlantedForest, .registration = TRUE)
