--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: randomPlantedForest
-Title: What the Package Does (One Line, Title Case)
+Title: Random Planted Forest: A Directly Interpretable Tree Ensemble
 Version: 0.0.0.9000
 Authors@R: c(
     person(c("Joseph", "Theo"), "Meyer", role = "aut"),
@@ -9,7 +9,9 @@ Authors@R: c(
     person("Lukas", "Burk", , "burk@leibniz-bips.de", role = c("cre", "aut"),
            comment = c(ORCID = "0000-0001-7528-3795"))
   )
-Description: What the package does (one paragraph).
+Description: An implementation of the Random Planted Forest algorithm for
+    directly interpretable tree ensembles based on a functional ANOVA
+    decomposition.
 License: Apache License (>= 2)
 URL: https://github.com/PlantedML/randomPlantedForest
 BugReports: https://github.com/PlantedML/randomPlantedForest/issues
