--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Suggests:
     mvtnorm,
     recipes,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    tidyr
 LinkingTo: 
     Rcpp
 Config/testthat/edition: 3
