Expand component extraction API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(rpf,default)
 S3method(rpf,formula)
 S3method(rpf,matrix)
 S3method(rpf,recipe)
+export(extract_component)
 export(extract_components)
 export(rpf)
 import(checkmate)
