--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(predict,rpf)
 S3method(print,rpf)
+S3method(purify,default)
+S3method(purify,rpf)
 S3method(rpf,data.frame)
 S3method(rpf,default)
 S3method(rpf,formula)
@@ -9,6 +11,7 @@ S3method(rpf,matrix)
 S3method(rpf,recipe)
 export(extract_component)
 export(extract_components)
+export(purify)
 export(rpf)
 import(checkmate)
 importFrom(Rcpp,loadModule)
@@ -25,4 +28,6 @@ importFrom(hardhat,validate_outcomes_are_univariate)
 importFrom(hardhat,validate_prediction_size)
 importFrom(methods,new)
 importFrom(stats,model.matrix)
+importFrom(tibble,as_tibble)
+importFrom(utils,combn)
 useDynLib(randomPlantedForest, .registration = TRUE)
