Import capture.output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,5 +29,6 @@ importFrom(hardhat,validate_prediction_size)
 importFrom(methods,new)
 importFrom(stats,model.matrix)
 importFrom(tibble,as_tibble)
+importFrom(utils,capture.output)
 importFrom(utils,combn)
 useDynLib(randomPlantedForest, .registration = TRUE)
