Add is_purified wrapper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(rpf,matrix)
 S3method(rpf,recipe)
 export(extract_component)
 export(extract_components)
+export(is_purified)
 export(purify)
 export(rpf)
 import(checkmate)
