Prepare for adding vignettes

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ rsconnect/
 # R package: bookdown caching files
 /*_files/
 # End of https://www.toptal.com/developers/gitignore/api/r
+inst/doc
+/doc/
+/Meta/
