Add simple print methods for forests to avoid console flooding

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(predict,rpf)
 S3method(print,rpf)
+S3method(print,rpf_forest)
 S3method(purify,default)
 S3method(purify,rpf)
 S3method(rpf,data.frame)
@@ -9,6 +10,7 @@ S3method(rpf,default)
 S3method(rpf,formula)
 S3method(rpf,matrix)
 S3method(rpf,recipe)
+S3method(str,rpf_forest)
 export(extract_components)
 export(is_purified)
 export(purify)
