--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(str,rpf_forest)
 export(extract_components)
 export(is_purified)
 export(plot_main_effect)
+export(plot_threeway_effects)
 export(plot_twoway_effects)
 export(purify)
 export(rpf)
