Rename extract_components -> predict_components

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,11 +12,11 @@ S3method(rpf,formula)
 S3method(rpf,matrix)
 S3method(rpf,recipe)
 S3method(str,rpf_forest)
-export(extract_components)
 export(is_purified)
 export(plot_main_effect)
 export(plot_threeway_effects)
 export(plot_twoway_effects)
+export(predict_components)
 export(purify)
 export(rpf)
 import(checkmate)
