--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,16 +13,15 @@ Description: An implementation of the Random Planted Forest algorithm for
     directly interpretable tree ensembles based on a functional ANOVA
     decomposition.
 License: Apache License (>= 2)
-URL: https://github.com/PlantedML/randomPlantedForest
+URL: https://github.com/PlantedML/randomPlantedForest,
+  http://plantedml.com/randomPlantedForest/
 BugReports: https://github.com/PlantedML/randomPlantedForest/issues
 Imports: 
     checkmate,
     data.table,
-    ggplot2,
     hardhat,
     methods,
     Rcpp,
-    scales,
     utils
 Suggests: 
     covr,
