Update NEWS, add data.table imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,9 +18,17 @@ export(rpf)
 import(checkmate)
 importFrom(Rcpp,loadModule)
 importFrom(Rcpp,sourceCpp)
+importFrom(data.table,":=")
 importFrom(data.table,':=')
+importFrom(data.table,.BY)
+importFrom(data.table,.EACHI)
+importFrom(data.table,.GRP)
+importFrom(data.table,.I)
+importFrom(data.table,.N)
+importFrom(data.table,.NGRP)
 importFrom(data.table,.SD)
 importFrom(data.table,as.data.table)
+importFrom(data.table,data.table)
 importFrom(hardhat,default_formula_blueprint)
 importFrom(hardhat,default_recipe_blueprint)
 importFrom(hardhat,default_xy_blueprint)
