--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,8 @@ Suggests:
     testthat (>= 3.0.0)
 LinkingTo: 
     Rcpp
+Config/needs/website:
+  ggplot2
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
