--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     utils
 Suggests: 
     covr,
+    ggplot2,
     knitr,
     mvtnorm,
     recipes,
@@ -32,8 +33,6 @@ Suggests:
     testthat (>= 3.0.0)
 LinkingTo: 
     Rcpp
-Config/needs/website:
-  ggplot2
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
