--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,8 @@ Suggests:
     testthat (>= 3.0.0)
 LinkingTo: 
     Rcpp
+Config/needs/website:
+  patchwork
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
