--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: An implementation of the Random Planted Forest algorithm for
     decomposition.
 License: Apache License (>= 2)
 URL: https://github.com/PlantedML/randomPlantedForest,
-  http://plantedml.com/randomPlantedForest/
+    http://plantedml.com/randomPlantedForest/
 BugReports: https://github.com/PlantedML/randomPlantedForest/issues
 Imports: 
     checkmate,
@@ -24,8 +24,6 @@ Imports:
     Rcpp,
     utils
 Suggests: 
-    covr,
-    ggplot2,
     knitr,
     mvtnorm,
     recipes,
@@ -33,11 +31,12 @@ Suggests:
     testthat (>= 3.0.0)
 LinkingTo: 
     Rcpp
-Config/needs/website:
-  patchwork
+VignetteBuilder: 
+    knitr
+Config/Needs/coverage: covr
+Config/Needs/website: patchwork, ggplot2
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 SystemRequirements: C++11
-VignetteBuilder: knitr
