add xgboost converter function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(rpf,formula)
 S3method(rpf,matrix)
 S3method(rpf,recipe)
 S3method(str,rpf_forest)
+export(convert_xgboost_rpf)
 export(is_purified)
 export(predict_components)
 export(purify)
@@ -39,4 +40,5 @@ importFrom(methods,new)
 importFrom(stats,model.matrix)
 importFrom(utils,capture.output)
 importFrom(utils,combn)
+importFrom(xgboost,xgb.model.dt.tree)
 useDynLib(randomPlantedForest, .registration = TRUE)
